c2rust-refactor/tests/snapshots/snapshots__refactor-reorganize_definitions-reorganize_foreign_fn_arity.rs.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor reorganize_definitions --rewrite-mode alongside -- tests/snapshots/reorganize_foreign_fn_arity.rs --edition 2021
---
#![feature(rustc_private)]
#![feature(register_tool)]
#![register_tool(c2rust)]
#![allow(non_upper_case_globals)]
#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub mod decl_h {
    extern "C" {

        pub fn takes_args(x: libc::c_int) -> libc::c_int;
    }

    use ::libc;
}
extern crate libc;

// The same header declares `takes_args` with a different number of
// parameters in each translation unit, which is what a K&R-style `int f()`
// declaration in one unit and a prototyped `int f(int, int)` in another
// turn into. The two declarations are not interchangeable and must not be
// merged into one.

pub mod a {
    use libc;

    use crate::decl_h::takes_args;

    pub unsafe fn call_one() -> libc::c_int {
        crate::decl_h::takes_args(1)
    }
}

pub mod b {
    use libc;

    use crate::decl_h::takes_args;

    pub unsafe fn call_two() -> libc::c_int {
        crate::decl_h::takes_args(1, 2)
    }
}

fn main() {}
