c2rust-refactor/tests/snapshots/snapshots__refactor-reorganize_definitions-reorganize_glob_import.rs.snap
---
source: c2rust-refactor/tests/snapshots.rs
expression: c2rust-refactor reorganize_definitions --rewrite-mode alongside -- tests/snapshots/reorganize_glob_import.rs --edition 2021
---
#![feature(register_tool)]
#![register_tool(c2rust)]
#![allow(non_camel_case_types)]
#![allow(dead_code)]
#![allow(unused_imports)]

pub mod defs {
    #[derive(Copy, Clone)]
    pub struct thing {
        pub x: i32,
    }

    pub const LIMIT: i32 = 10;
}

pub mod user {

    // =============== BEGIN user_h ================
    #[derive(Copy, Clone)]
    pub struct config {
        pub t: crate::defs::thing,
    }
    pub mod user_h {
        // A glob import in a header module. It has no single ident to merge
        // on, so `reorganize_definitions` must keep it in the header instead
        // of trying to move it (or panicking). Note that items moved out of
        // this header cannot rely on the glob's bindings: bare paths that
        // resolve through it are not canonicalized on the way out.
        pub use crate::defs::*;
    }

    pub fn go(c: crate::user::config) -> i32 {
        c.t.x + crate::defs::LIMIT
    }
}

fn main() {}
